# any_scatter3d

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  release.sh
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: binary.ts  index.ts  interaction.ts  model.ts  three_scene.ts  ui.ts  view.ts
src/any_scatter3d/: __init__.py  counter.css  counter.js  counter.py  scatter3d.css  scatter3d.js  scatter3d.py  scatter3d_old.js  widget_test.py
src/any_scatter3d/old/: scatter3d.py
src/any_scatter3d/static/: scatter3d.js  scatter3d.js.map
src/scatter3d/: scatter3d.py  widget_test.py
src/scatter3d/static/: scatter3d.js
test/: test_categories.py  test_scatter_widget.py
