[project]
name = "any-scatter3d"
version = "0.1.0"
description = "3D scatter widget with lasso selection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget[dev]>=0.9.21",
    "marimo>=0.18.4",
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
