[project]
name = "any-scatter3d"
version = "0.1.0"
description = "3D scatter widget with lasso selection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget[dev]>=0.9.21",
    "marimo>=0.18.4",
    "narwhals>=2.14.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
]
